@@ -19,22 +19,17 @@ public class AutomateDialer {
 		
 		DesiredCapabilities capabilities = new DesiredCapabilities();
 		//com.google.android.dialer/com.google.android.dialer.extensions.GoogleDialtactsActivity
-		   capabilities.setCapability("deviceName","OnePlus AC2001");
-	        capabilities.setCapability("platformname", "Android");     
-	        capabilities.setCapability("automationName","uiautomator2");
-	        capabilities.setCapability("platformversion", "12");
-	        
-	        capabilities.setCapability("appPackage","com.google.android.dialer");
-	        capabilities.setCapability("appActivity", "com.google.android.dialer.extensions.GoogleDialtactsActivity");
-	        
-	        
-
-	        URL url = URI.create("http://127.0.0.1:4723/").toURL();
-	        
-	        AndroidDriver driver = new AndroidDriver(url, capabilities);
-	        Thread.sleep(5000);
-	        System.out.println("Application Started");
-	        
+		capabilities.setCapability("deviceName","Gangesh");
+        capabilities.setCapability("platformname", "Android");     
+        capabilities.setCapability("automationName","uiautomator2");
+        capabilities.setCapability("platformversion", "12");
+        capabilities.setCapability("appPackage","com.google.android.dialer");
+        capabilities.setCapability("appActivity", "com.google.android.dialer.extensions.GoogleDialtactsActivity");
+        
+        AndroidDriver driver = new AndroidDriver(new URL("http://127.0.0.1:4723/wd/hub"), capabilities);
+        Thread.sleep(5000);
+        System.out.println("Application Started");
+        	        
 	       
 	        
 	        //click dial pad
@@ -44,24 +39,22 @@ public class AutomateDialer {
 	     //  com.google.android.dialer:id/dialpad_voice_call_button
 	       
 	       //098100 12345
-	       driver.findElement(By.id("com.google.android.dialer:id/zero")).click();
 	       driver.findElement(By.id("com.google.android.dialer:id/nine")).click();
+	       driver.findElement(By.id("com.google.android.dialer:id/seven")).click();
+	       driver.findElement(By.id("com.google.android.dialer:id/one")).click();
 	       driver.findElement(By.id("com.google.android.dialer:id/eight")).click();
-	       driver.findElement(By.id("com.google.android.dialer:id/one")).click();
 	       driver.findElement(By.id("com.google.android.dialer:id/zero")).click();
-	       driver.findElement(By.id("com.google.android.dialer:id/zero")).click();
-	       driver.findElement(By.id("com.google.android.dialer:id/one")).click();
-	       driver.findElement(By.id("com.google.android.dialer:id/two")).click();
-	       driver.findElement(By.id("com.google.android.dialer:id/three")).click();
-	       driver.findElement(By.id("com.google.android.dialer:id/four")).click();
 	       driver.findElement(By.id("com.google.android.dialer:id/five")).click();
+	       driver.findElement(By.id("com.google.android.dialer:id/seven")).click();
+	       driver.findElement(By.id("com.google.android.dialer:id/four")).click();
+	       driver.findElement(By.id("com.google.android.dialer:id/three")).click();
+	       driver.findElement(By.id("com.google.android.dialer:id/six")).click();
+	       //driver.findElement(By.id("com.google.android.dialer:id/five")).click();
 	       
 	       //click in call button
 	       driver.findElement(By.id("com.google.android.dialer:id/dialpad_voice_call_button")).click();
-
-	       
-	       Thread.sleep(5000);
-	        driver.quit();//CLOSE SESSION
+	       driver.findElement(By.id("com.google.android.dialer:id/incall_end_call")).click();
+	        driver.close();//CLOSE SESSION
 	}
 
 }
